tests/aster/x/mochi/rosetta/fermat-numbers.error
error[A002]: type mismatch for result: bigint vs int
  --> /workspace/mochi/tests/rosetta/x/Mochi/fermat-numbers.mochi:16:3

 16 |   var result: bigint = 1
    |   ^

help:
  Ensure result matches
